Bug #1242
libwrap has undefined symbols
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
lib - userland libraries
Start date:
2011-07-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
tcpd.h prototypes 'allow_severity' and 'deny_severity' but libwrap leaves them undefined.
Updated by Yuri Pankov over 9 years ago
They both are extern, so probably should be defined by consumers of libwrap or am I missing something here?
Updated by Yuri Pankov over 9 years ago
Got it (checking http://svnweb.freebsd.org/base/head/lib/libwrap/libvars.c?view=log), should we probably do the same?
Updated by Rich Lowe over 9 years ago
- Category set to lib - userland libraries
- Status changed from New to Resolved
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13440 commit:49d0a9c4f724