1242 libwrap has undefined symbols Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Albert Lee <trisk@opensolaris.org> Approved by: Richard Lowe <richlowe@richlowe.net>